--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple eCommerce Website</title>
-    <link rel="stylesheet" href="styles.css">
+   <title>Calculator</title>
+   <link rel="stylesheet" href="calc.css">
 </head>
 <body>
-    <header>
-        <h1>My eCommerce Store</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="https://www.youtube.com/">Products</a></li>
-                <li><a href="#">Cart</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="product-list">
-            <div class="product">
-                <img src="https://via.placeholder.com/150" alt="Product 1">
-                <h2>Product 1</h2>
-                <p>$10.00</p>
-                <button onclick="addToCart('Product 1', 10)">Add to Cart</button>
+   <div id="calc">
+      <div id="content">
+         <form>
+            <div id="output">
+               <input type="text" id='res'>
             </div>
-            <div class="product">
-                <img src="https://via.placeholder.com/150" alt="Product 2">
-                <h2>Product 2</h2>
-                <p>$20.00</p>
-                <button onclick="addToCart('Product 2', 20)">Add to Cart</button>
+            <div class="btn">
+               <input type="button" value='C' onclick="Clear()" id="clear">
+               <input type="button" value='←' onclick="Back()" id="backspace">
+               <input type="button" value='%' onclick="Solve('%')">
+               <input type="button" value='/' onclick="Solve('/')">
+               <br>
+               <input type="button" value='7' onclick="Solve('7')">
+               <input type="button" value='8' onclick="Solve('8')">
+               <input type="button" value='9' onclick="Solve('9')">
+               <input type="button" value='x' onclick="Solve('*')">
+               <br>
+               <input type="button" value='4' onclick="Solve('4')">
+               <input type="button" value='5' onclick="Solve('5')">
+               <input type="button" value='6' onclick="Solve('6')">
+               <input type="button" value='-' onclick="Solve('-')">
+               <br>
+               <input type="button" value='1' onclick="Solve('1')">
+               <input type="button" value='2' onclick="Solve('2')">
+               <input type="button" value='3' onclick="Solve('3')">
+               <input type="button" value='+' onclick="Solve('+')">
+               <br>
+               <input type="button" value='00' onclick="Solve('00')">
+               <input type="button" value='0' onclick="Solve('0')">
+               <input type="button" value='.' onclick="Solve('.')">
+               <input type="button" value='=' onclick="Result()">
             </div>
-            <!-- Add more products as needed -->
-        </section>
-        <section class="cart">
-            <h2>Shopping Cart</h2>
-            <ul id="cart-items"></ul>
-            <p>Total: $<span id="cart-total">0.00</span></p>
-        </section>
-    </main>
-    <script src="scripts.js"></script>
+         </form>
+      </div>
+   </div>
+   <script src='calci.js'></script>
 </body>
 </html>
